command para despacho em fila de roteamento de pedido
